Fix grid-row swapping on mobile

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1052,10 +1052,12 @@ body:where(.home-template) .gh-outer {
 .gh-article:where(.post, .page):not(.no-image) {
   & > .gh-article-header {
     position: relative;
-    min-height: 540px;
-    max-height: 840px;
-    overflow: hidden;
-    place-content: center;
+    @media (min-width: 960px) {
+      min-height: 540px;
+      max-height: 840px;
+      overflow: hidden;
+      place-content: center;
+    }
     & > .gh-article-title {
       padding-inline: var(--content-gutter, 2rem);
     }
@@ -1067,7 +1069,10 @@ body:where(.home-template) .gh-outer {
       top: 0;
       right: 0;
       z-index: -1;
-      width: 66%;
+      width: 100%;
+      @media (min-width: 960px) {
+        width: 66%;
+      }
       &::before {
         content: "";
         position: absolute;
@@ -1077,7 +1082,7 @@ body:where(.home-template) .gh-outer {
         background-image: linear-gradient(
           90deg,
           var(--background-color) 0%,
-          transparent 50%
+          hsl(0, 9%, 96% / 0.25) 50%
         );
       }
     }
@@ -1096,4 +1101,14 @@ body:where(.page-team)
   font-weight: 300;
   line-height: 1.3em;
   max-width: none;
+}
+
+.gh-home-content
+  .kg-header-card:where(.kg-swapped)
+  .kg-header-card-content
+  .kg-header-card-text {
+  grid-row: 1;
+  @media (min-width: 960px) {
+    grid-row: 2;
+  }
 }
